FIX: z-index header and sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header {
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   top: 0;
 }
@@ -437,6 +437,8 @@ nav ul li a:hover {
   width: 250px;
   height: 100vh;
   background-color: #f4f4f4;
+  background-image: url("../assets/serentak_memilih_logo.png");
+  background-size: 20px;
   position: fixed;
   top: 0;
   right: -250px;
